--- a/src/main/resources/templates/article/form.html
+++ b/src/main/resources/templates/article/form.html
@@ -111,7 +111,7 @@
             title: [[${form.title}]],
             content: [[${form.content}]],
             coverImg: [[${form.coverImg}]],
-            summarize: [[${form.summarize}]],
+            summarize: [[${form.summarize}]] || '',
             vote: [[${form.vote}]] || 0,
             weight: [[${form.weight}]] || 0
         };
