--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -77,6 +77,8 @@
 .size14{font-size: 1.4em;}
 .size16{font-size: 1.6em;}
 .borderRadius50{border-radius:50%;}
+.borderRadius10{border-radius:1em;}
+.borderRadius5{border-radius:0.5em;}
 .padding-top10{padding-top: 1em;}
 .padding-left10{padding-left: 1em;}
 .padding-bottom10{padding-bottom: 1em;}
@@ -104,7 +106,7 @@
 .textBlack{color: black;}
 .textWhite{color: white;}
 .textWhite2{color: #cac8c2;}
-.borderNone{border: none;}
+.borderNone{border: none !important;}
 .familyS9{font-family:'宋体';font-size: 0.9em;}
 body{
     font-size: 62.5%;
