--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -34,7 +34,7 @@
             <img src="/static/image/logo_lg.png">
         </div>
         <form name="registerForm">
-            <fieldset class="form-group bg-red shadow2 borderRadius5">
+            <fieldset class="form-group bg-red borderRadius5">
                 <i class="fa fa-male margin10"></i>
                 <label class="radio-inline">
                     <input type="radio" name="sex" value="MAN" minlength="2" maxlength="20" ng-model="user.sex">
