--- a/src/main/resources/templates/story/list.html
+++ b/src/main/resources/templates/story/list.html
@@ -27,6 +27,7 @@
         </a>
     </div>
 </div>
+<a href="#0" class="cd-top">Top</a>
 <div th:include="fragment::tooltip"></div>
 </body>
 <script type="text/javascript" src="/static/js/ng-infinite-scroll.min.js"></script>
