回到顶部插件样式修改

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -61,9 +61,11 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     /* image replacement properties */
     overflow: hidden;
-    text-indent: 100%;
+    text-align: center;
+    color: white !important;
+    padding-top: 6px;
     white-space: nowrap;
-    background: rgba(232, 98, 86, 0.8) url(../img/cd-top-arrow.svg) no-repeat center 50%;
+    background: #bd8c7d;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: opacity .3s 0s, visibility 0s .3s;
