--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 </div>
-<a href="#0" class="cd-top">Top</a>
+<a href="#0" class="cd-top"><i class="fa fa-arrow-up"></i> </a>
 <div th:include="fragment::tooltip"></div>
 </body>
 <script type="text/javascript" src="/static/js/ng-infinite-scroll.min.js"></script>
