--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,7 +20,7 @@
             padding: 1em;
         }
 
-        .registerForm .logo{
+        .registerForm .logo {
             margin-left: 5em;
             margin-bottom: 2em;
         }
@@ -85,7 +85,7 @@
                        ng-show="registerForm.mobile.$dirty && registerForm.mobile.$invalid">请填写正确的手机号</label>
                 <div class="input-group">
                     <label class="input-group-addon bg-red borderNone"><i class="fa fa-mobile width10"></i> </label>
-                    <input class="form-control" placeholder="手机号" type="text" name="mobile" required
+                    <input class="form-control" placeholder="手机号" type="text" name="mobile" required ng-pattern="/^1(3|4|5|7|8)\d{9}$/"
                            ng-model-options="{ updateOn: 'blur' }" ng-model="user.mobile">
                 </div>
             </fieldset>
@@ -99,7 +99,7 @@
                            ng-model="user.email">
                 </div>
             </fieldset>
-            <button type="button" ng-click="register()"
+            <button type="button" ng-click="register(registerForm.$valid)"
                     ng-disabled="registerForm.$invalid || user.password != user.repeatPwd"
                     class="btn btn-block btn-warning-outline">注&nbsp;&nbsp;册
             </button>
@@ -137,35 +137,29 @@
             $scope.registerSuccess = isShow;
         }
 
-        $scope.register = function () {
-            console.log(angular.element(".registerForm").valid);
-//            $scope.registerSuccess = false;
-//            $http.post('/register', $scope.user).success(function (data) {
-//                if (data.code) {
-//                    angular.element("#alertInfo").addClass("alert-success");
-//                    setResponseMsg("注册成功！3秒后自动跳转……", true);
-//                    setTimeout(function () {
-//                        if ($scope.needBack) {
-//                            location.href = $scope.backUrl;
-//                        } else {
-//                            location.href = data.jumpUrl;
-//                        }
-//                    }, 3000);
-//                } else {
-//                    angular.element("#alertInfo").addClass("alert-danger");
-//                    setResponseMsg("注册失败！" + data.msg, true);
-//                }
-//            });
+        $scope.register = function (isValid) {
+            angular.element('input').blur();
+           if(isValid) {
+               $scope.registerSuccess = false;
+               $http.post('/register', $scope.user).success(function (data) {
+                   if (data.code) {
+                       angular.element("#alertInfo").addClass("alert-success");
+                       setResponseMsg("注册成功！3秒后自动跳转……", true);
+                       setTimeout(function () {
+                           if ($scope.needBack) {
+                               location.href = $scope.backUrl;
+                           } else {
+                               location.href = data.jumpUrl;
+                           }
+                       }, 3000);
+                   } else {
+                       angular.element("#alertInfo").addClass("alert-danger");
+                       setResponseMsg("注册失败！" + data.msg, true);
+                   }
+               });
+           }
         };
 
-        $(function () {
-            document.onkeydown = function (e) {
-                e = e || event;
-                if (e.keyCode == 13) {
-                    $scope.register();
-                }
-            };
-        });
     });
 </script>
 </body>
