--- a/src/main/resources/templates/story/userList.html
+++ b/src/main/resources/templates/story/userList.html
@@ -32,7 +32,7 @@
             <div class="clearfix"></div>
         </div>
     </div>
-    <div class="pagination">
+    <div class="pagination" ng-show="stories.length >0">
         <a href="#" class="first" data-action="first">&laquo;</a>
         <a href="#" class="previous" data-action="previous">&lsaquo;</a>
         <input type="text" readonly="readonly"/>
