--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -47,7 +47,7 @@
              </textarea>
         </fieldset>
         <fieldset class="form-group margin-top20">
-            <button class="btn btn-info-outline btn-lg btn-block" type="button" ng-disabled="infoForm.$invalid" ng-click="updateUser()">保&nbsp;&nbsp;存</button>
+            <button class="btn btn-info-outline btn-lg btn-block" type="button" ng-disabled="infoForm.$invalid" ng-click="updateUser(infoForm.$valid)">保&nbsp;&nbsp;存</button>
         </fieldset>
     </form>
 </div>
