--- a/src/main/resources/templates/user/password.html
+++ b/src/main/resources/templates/user/password.html
@@ -24,7 +24,7 @@
             <input type="password" name="confirmPassword" class="form-control" ng-minlength="1" ng-maxlength="12" required ng-model-options="{ updateOn: 'blur' }" ng-model="confirmPassword">
         </fieldset>
         <fieldset class="form-group margin-top20">
-            <button class="btn btn-info-outline btn-lg btn-block" type="button" ng-disabled="passwordForm.$invalid || newPassword != confirmPassword" ng-click="updatePassword()">保&nbsp;&nbsp;存</button>
+            <button class="btn btn-info-outline btn-lg btn-block" type="button" ng-disabled="passwordForm.$invalid || newPassword != confirmPassword" ng-click="updatePassword(passwordForm.$valid)">保&nbsp;&nbsp;存</button>
         </fieldset>
     </form>
 </div>
