--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,16 +53,16 @@
                 <fieldset class="form-group">
                     <div class="input-group">
                         <div class="input-group-addon bg-red borderNone"><i class="fa fa-user width10"></i></div>
-                        <input type="text" class="form-control" placeholder="昵称/手机号" ng-model="nameOrMobile">
+                        <input type="text" class="form-control" required placeholder="昵称/手机号" ng-model="nameOrMobile">
                     </div>
                 </fieldset>
                 <fieldset class="form-group">
                     <div class="input-group">
                         <div class="input-group-addon bg-red borderNone"><i class="fa fa-lock width10"></i></div>
-                        <input type="password" class="form-control" placeholder="密码" ng-model="password">
+                        <input type="password" class="form-control" required placeholder="密码" ng-model="password">
                     </div>
                 </fieldset>
-                <button type="button" class="btn btn-warning-outline btn-block" ng-click="login()">登&nbsp;&nbsp;录
+                <button type="button" class="btn btn-warning-outline btn-block" ng-disabled="loginForm.$invalid" ng-click="login()">登&nbsp;&nbsp;录
                 </button>
                 <fieldset class="form-group">
                     <div style="padding-top: 20px;">
